# psychedelic_gif_creator

./: CMakeLists.txt  README.md  advancedsettingsdialog.cpp  advancedsettingsdialog.h  gif_generator.cpp  gif_generator.h  gif_settings.h  gif_worker.cpp  gif_worker.h  main.cpp  mainwindow.cpp  mainwindow.h
